--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -16,71 +16,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Literal, Optional\n",
     "\n",
-    "from confflow import BaseConfig, Field, config_manager"
+    "from confflow import BaseSchema, SchemaField, confflow"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Settings"
+    "## Schema as Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CommonSettings(BaseConfig):\n",
-    "    name: str = Field(..., min_length=3, max_length=50, description=\"The name of the configuration.\")\n",
-    "    enabled: bool = Field(default=True, description=\"Indicates if this configuration is enabled.\")\n",
-    "    priority: int = Field(default=1, ge=1, le=10, description=\"Priority level, must be between 1 and 10.\")\n",
+    "class CommonSettings(BaseSchema):\n",
+    "    name: str = SchemaField(..., min_length=3, max_length=50, description=\"The name of the configuration.\")\n",
+    "    enabled: bool = SchemaField(default=True, description=\"Indicates if this configuration is enabled.\")\n",
+    "    priority: int = SchemaField(default=1, ge=1, le=10, description=\"Priority level, must be between 1 and 10.\")\n",
     "\n",
     "\n",
-    "class DatabaseConfig(BaseConfig):\n",
-    "    db_url: str = Field(..., pattern=r\"^(postgres|mysql|sqlite)://\", description=\"Database connection URL.\")\n",
-    "    max_connections: int = Field(default=10, ge=1, le=100, description=\"Max number of connections.\")\n",
-    "    timeout: Optional[int] = Field(default=30, ge=10, le=300, description=\"Timeout in seconds.\")\n",
+    "class DatabaseConfig(BaseSchema):\n",
+    "    db_url: str = SchemaField(..., pattern=r\"^(postgres|mysql|sqlite)://\", description=\"Database connection URL.\")\n",
+    "    max_connections: int = SchemaField(default=10, ge=1, le=100, description=\"Max number of connections.\")\n",
+    "    timeout: Optional[int] = SchemaField(default=30, ge=10, le=300, description=\"Timeout in seconds.\")\n",
     "\n",
     "\n",
-    "class APIConfig(BaseConfig):\n",
-    "    endpoint: str = Field(..., pattern=r\"^https?://\", description=\"API endpoint URL.\")\n",
-    "    auth_token: Optional[str] = Field(None, description=\"Optional authentication token.\")\n",
-    "    retries: int = Field(default=3, ge=0, le=10, description=\"Number of retries in case of failure.\")\n",
+    "class APIConfig(BaseSchema):\n",
+    "    endpoint: str = SchemaField(..., pattern=r\"^https?://\", description=\"API endpoint URL.\")\n",
+    "    auth_token: Optional[str] = SchemaField(None, description=\"Optional authentication token.\")\n",
+    "    retries: int = SchemaField(default=3, ge=0, le=10, description=\"Number of retries in case of failure.\")\n",
     "\n",
     "\n",
-    "class FeatureFlags(BaseConfig):\n",
-    "    experimental_feature: bool = Field(default=False, description=\"Toggle for experimental feature.\")\n",
-    "    legacy_mode: bool = Field(default=False, description=\"Enable legacy mode for backward compatibility.\")\n",
+    "class FeatureFlags(BaseSchema):\n",
+    "    experimental_feature: bool = SchemaField(default=False, description=\"Toggle for experimental feature.\")\n",
+    "    legacy_mode: bool = SchemaField(default=False, description=\"Enable legacy mode for backward compatibility.\")\n",
     "\n",
     "\n",
     "# Mutually Exclusive Models\n",
-    "class FileStorageConfig(BaseConfig):\n",
-    "    storage_path: str = Field(..., description=\"Path to the storage directory.\")\n",
-    "    max_size_mb: int = Field(default=100, ge=10, le=1024, description=\"Maximum storage size in MB.\")\n",
-    "    backup_enabled: bool = Field(default=True, description=\"Enable backup for stored files.\")\n",
+    "class FileStorageConfig(BaseSchema):\n",
+    "    storage_path: str = SchemaField(..., description=\"Path to the storage directory.\")\n",
+    "    max_size_mb: int = SchemaField(default=100, ge=10, le=1024, description=\"Maximum storage size in MB.\")\n",
+    "    backup_enabled: bool = SchemaField(default=True, description=\"Enable backup for stored files.\")\n",
     "\n",
     "\n",
-    "class CloudStorageConfig(BaseConfig):\n",
-    "    provider: Literal['aws', 'gcp', 'azure'] = Field(..., description=\"Cloud storage provider.\")\n",
-    "    bucket_name: str = Field(..., min_length=3, description=\"Name of the cloud storage bucket.\")\n",
-    "    region: Optional[str] = Field(None, description=\"Optional region of the cloud storage bucket.\")"
+    "class CloudStorageConfig(BaseSchema):\n",
+    "    provider: Literal['aws', 'gcp', 'azure'] = SchemaField(..., description=\"Cloud storage provider.\")\n",
+    "    bucket_name: str = SchemaField(..., min_length=3, description=\"Name of the cloud storage bucket.\")\n",
+    "    region: Optional[str] = SchemaField(None, description=\"Optional region of the cloud storage bucket.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Registrating Schemas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_manager.register_schemas(\n",
+    "confflow.register_schemas(\n",
     "    CommonSettings,\n",
     "    FeatureFlags,\n",
     "    CloudStorageConfig,\n",
@@ -94,7 +101,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_manager.set_mutual_exclusive_groups([CloudStorageConfig, DatabaseConfig])"
+    "# TODO mutual exlusion directly as list!\n",
+    "confflow.register_schemas(\n",
+    "    CommonSettings,\n",
+    "    FeatureFlags,\n",
+    "    [\n",
+    "        CloudStorageConfig,\n",
+    "        DatabaseConfig\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confflow.set_mutual_exclusive_groups([CloudStorageConfig, DatabaseConfig])"
    ]
   },
   {
@@ -103,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_manager.create_template(\"template_config.yml\")"
+    "confflow.create_template(\"template_config.yml\")"
    ]
   },
   {
@@ -112,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_manager.load_yaml(\"config.yml\")"
+    "confflow.load_yaml(\"config.yml\")"
    ]
   },
   {
@@ -121,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_manager[\"CommonSettings\"]"
+    "confflow[\"CommonSettings\"]"
    ]
   },
   {
@@ -130,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_manager[\"CommonSettings\"][\"enabled\"]"
+    "confflow[\"CommonSettings\"][\"enabled\"]"
    ]
   }
  ],
