--- a/playground.ipynb 14-55-58-364.ipynb
+++ b/playground.ipynb 14-55-58-364.ipynb
@@ -2,21 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ad9907d3",
    "metadata": {},
    "source": [
-    "# Confflow Demo"
+    "# Tests"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "47020fe7",
    "metadata": {},
    "source": [
-    "## Imports"
+    "## Fixtures"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "f59ab36f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +32,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "709c823d",
    "metadata": {},
    "source": [
-    "## Schema as Code"
+    "## Schemas"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "1dc45c3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,49 +104,69 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Usage"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "aac69d04",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_manager.create_template(output_path=\"./template.yml\")"
+    "config_manager.create_template(output_path=\"../template.yml\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "25d414eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_manager.load(\"./config.yml\")"
+    "# config_manager.save(output_path=\"../config.yml\", )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
+   "id": "99be58c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_manager.load(input_path=\"../config.yml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7fcc9cbc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'MyApp Configuration', 'enabled': True, 'priority': 5}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'CommonSettings': CommonSettings(name='ProductionConfig', enabled=True, priority=5),\n",
+       " 'DatabaseConfig': DatabaseConfig(db_url='postgres://user:password@localhost:5432/mydatabase', max_connections=20, timeout=60),\n",
+       " 'APIConfig': APIConfig(endpoint='https://api.myservice.com/v1/', auth_token='abcdef123456', retries=5),\n",
+       " 'FeatureFlags': FeatureFlags(experimental_feature=False, legacy_mode=True),\n",
+       " 'FileStorageConfig': FileStorageConfig(storage_path='/var/app/storage', max_size_mb=500, backup_enabled=True),\n",
+       " 'AdamConfig': AdamConfig(type='adam', learning_rate=0.001),\n",
+       " 'AttentionConfig': AttentionConfig(use_attention=True, num_heads=8)}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def kwargs(**kwargs):\n",
-    "    print(kwargs)\n",
-    "\n",
-    "kwargs(**config_manager[\"CommonSettings\"])"
+    "config_manager.configurations"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9582761",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -164,5 +189,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
