--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "from pydantic import BaseModel, Field, model_validator\n",
     "\n",
-    "from confflow import config_manager, register"
+    "from confflow import MutualExclusionRule, confflow\n"
    ]
   },
   {
@@ -40,53 +40,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@register(description=\"Common configuration settings shared across multiple components.\")\n",
     "class CommonSettings(BaseModel):\n",
     "    name: str = Field(..., min_length=3, max_length=50, description=\"The name of the configuration.\")\n",
     "    enabled: bool = Field(default=True, description=\"Indicates if this configuration is enabled.\")\n",
     "    priority: int = Field(default=1, ge=1, le=10, description=\"Priority level, must be between 1 and 10.\")\n",
     "\n",
-    "@register(description=\"Configuration settings for database connections.\")\n",
     "class DatabaseConfig(BaseModel):\n",
     "    db_url: str = Field(..., pattern=r\"^(postgres|mysql|sqlite)://\", description=\"Database connection URL.\")\n",
     "    max_connections: int = Field(default=10, ge=1, le=100, description=\"Max number of connections.\")\n",
     "    timeout: Optional[int] = Field(default=30, ge=10, le=300, description=\"Timeout in seconds.\")\n",
     "\n",
-    "@register(description=\"Settings for external API integration.\")\n",
     "class APIConfig(BaseModel):\n",
     "    endpoint: str = Field(..., pattern=r\"^https?://\", description=\"API endpoint URL.\")\n",
     "    auth_token: Optional[str] = Field(None, description=\"Optional authentication token.\")\n",
     "    retries: int = Field(default=3, ge=0, le=10, description=\"Number of retries in case of failure.\")\n",
     "\n",
-    "@register(description=\"Flags to control experimental and legacy features.\")\n",
     "class FeatureFlags(BaseModel):\n",
     "    experimental_feature: bool = Field(default=False, description=\"Toggle for experimental feature.\")\n",
     "    legacy_mode: bool = Field(default=False, description=\"Enable legacy mode for backward compatibility.\")\n",
     "\n",
-    "@register(description=\"Configuration for storing data on a local file system.\", exclusive_group=\"DataProvider\")\n",
     "class FileStorageConfig(BaseModel):\n",
     "    storage_path: str = Field(..., description=\"Path to the storage directory.\")\n",
     "    max_size_mb: int = Field(default=100, ge=10, le=1024, description=\"Maximum storage size in MB.\")\n",
     "    backup_enabled: bool = Field(default=True, description=\"Enable backup for stored files.\")\n",
     "\n",
-    "@register(description=\"Configuration for storing data using a cloud storage provider.\", exclusive_group=\"DataProvider\")\n",
     "class CloudStorageConfig(BaseModel):\n",
     "    provider: Literal['aws', 'gcp', 'azure'] = Field(..., description=\"Cloud storage provider.\")\n",
     "    bucket_name: str = Field(..., min_length=3, description=\"Name of the cloud storage bucket.\")\n",
     "    region: Optional[str] = Field(None, description=\"Optional region of the cloud storage bucket.\")\n",
     "\n",
-    "@register(description=\"Configuration for Adam optimizer.\", exclusive_group=\"Optimizer\")\n",
     "class AdamConfig(BaseModel):\n",
     "    type: Literal[\"adam\"] = Field(\"adam\", description=\"Optimizer type\")\n",
     "    learning_rate: float = Field(..., gt=0, description=\"Learning rate for Adam\")\n",
     "\n",
-    "@register(description=\"Configuration for SGD optimizer.\", exclusive_group=\"Optimizer\")\n",
     "class SGDConfig(BaseModel):\n",
     "    type: Literal[\"sgd\"] = Field(\"sgd\", description=\"Optimizer type\")\n",
     "    learning_rate: float = Field(..., gt=0, description=\"Learning rate for SGD\")\n",
     "    momentum: float = Field(..., ge=0.0, le=1.0, description=\"Momentum factor for SGD\")\n",
     "\n",
-    "@register()\n",
     "class AttentionConfig(BaseModel):\n",
     "    use_attention: bool\n",
     "    num_heads: Optional[int] = None\n",
@@ -111,7 +102,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_manager.create_template(output_path=\"./template.yml\")"
+    "confflow.register_schemas(\n",
+    "    CommonSettings,\n",
+    "    DatabaseConfig,\n",
+    "    APIConfig,\n",
+    "    FeatureFlags,\n",
+    "    FileStorageConfig,\n",
+    "    CloudStorageConfig,\n",
+    "    AdamConfig,\n",
+    "    SGDConfig,\n",
+    "    AttentionConfig\n",
+    ")"
    ]
   },
   {
@@ -120,28 +121,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "confflow.register_rules(\n",
+    "    MutualExclusionRule(\n",
+    "        FileStorageConfig,\n",
+    "        CloudStorageConfig,\n",
+    "    ),\n",
+    "    MutualExclusionRule(\n",
+    "        AdamConfig,\n",
+    "        SGDConfig\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "configurations = [\n",
+    "    CommonSettings(\n",
+    "        name=\"DefaultConfig\",\n",
+    "        enabled=True,\n",
+    "        priority=5\n",
+    "    ),\n",
+    "    DatabaseConfig(\n",
+    "        db_url=\"postgres://user:password@localhost:5432/mydb\",\n",
+    "        max_connections=20,\n",
+    "        timeout=60\n",
+    "    ),\n",
+    "    APIConfig(\n",
+    "        endpoint=\"https://api.example.com/v1/\",\n",
+    "        auth_token=\"secret-token\",\n",
+    "        retries=5\n",
+    "    ),\n",
+    "    FeatureFlags(\n",
+    "        experimental_feature=True,\n",
+    "        legacy_mode=False\n",
+    "    ),\n",
+    "    # FileStorageConfig(\n",
+    "    #     storage_path=\"/var/data/storage\",\n",
+    "    #     max_size_mb=512,\n",
+    "    #     backup_enabled=True\n",
+    "    # ),\n",
+    "    CloudStorageConfig(\n",
+    "        provider=\"aws\",\n",
+    "        bucket_name=\"my-app-bucket\",\n",
+    "        region=\"us-west-2\"\n",
+    "    ),\n",
+    "    AdamConfig(\n",
+    "        learning_rate=0.001\n",
+    "    ),\n",
+    "    # SGDConfig(\n",
+    "    #     learning_rate=0.01,\n",
+    "    #     momentum=0.9\n",
+    "    # ),\n",
+    "    AttentionConfig(\n",
+    "        use_attention=True,\n",
+    "        num_heads=8\n",
+    "    )\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confflow.set_configs(*configurations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_manager.create_template(output_path=\"./template.yml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "config_manager.load(\"./config.yml\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'MyApp Configuration', 'enabled': True, 'priority': 5}\n"
-     ]
-    }
-   ],
-   "source": [
-    "def kwargs(**kwargs):\n",
-    "    print(kwargs)\n",
-    "\n",
-    "kwargs(**config_manager[\"CommonSettings\"])"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
