--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -117,10 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO groups cannot share items in one rule?\n",
     "confflow.register_rules(\n",
     "    MutualExclusionRule(\n",
     "        FileStorageConfig,\n",
