--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -588,34 +588,30 @@
    "execution_count": 5,
    "id": "de47bb20",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "No value provided for field 'notes' in section 'features' and no default value specified",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[43mconfig_manager\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./comprehensive.yaml\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Development/confflow/confflow/manager/manager.py:100\u001b[0m, in \u001b[0;36mManager.load\u001b[0;34m(self, file_path)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(section_data, \u001b[38;5;28mdict\u001b[39m):\n\u001b[1;32m     96\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m     97\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSection \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mschema\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m must be a dictionary/object, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(section_data)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     98\u001b[0m     )\n\u001b[0;32m--> 100\u001b[0m schema_config: Config \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43mschema\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msection_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    101\u001b[0m schema_configs\u001b[38;5;241m.\u001b[39mappend(schema_config)\n\u001b[1;32m    102\u001b[0m processed_schemas\u001b[38;5;241m.\u001b[39madd(schema\u001b[38;5;241m.\u001b[39mname)\n",
-      "File \u001b[0;32m~/Development/confflow/confflow/config_factory.py:20\u001b[0m, in \u001b[0;36mcreate_config\u001b[0;34m(schema, data)\u001b[0m\n\u001b[1;32m     18\u001b[0m         items\u001b[38;5;241m.\u001b[39mappend(nested_config)\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 20\u001b[0m         entry: Entry[Value] \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_entry\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     21\u001b[0m \u001b[43m            \u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfield_or_subschema\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mschema\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m         items\u001b[38;5;241m.\u001b[39mappend(entry)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m Config(schema\u001b[38;5;241m.\u001b[39mname, schema\u001b[38;5;241m.\u001b[39mdescription, \u001b[38;5;241m*\u001b[39mitems)\n",
-      "File \u001b[0;32m~/Development/confflow/confflow/config_factory.py:53\u001b[0m, in \u001b[0;36mcreate_entry\u001b[0;34m(key, schema_field, data, parent_schema_name)\u001b[0m\n\u001b[1;32m     50\u001b[0m value: Optional[Value] \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mget(key, schema_field\u001b[38;5;241m.\u001b[39mdefault_value)\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m value \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 53\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m     54\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo value provided for field \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m in section \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mparent_schema_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     55\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mand no default value specified\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     56\u001b[0m     )\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     58\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Entry(\n\u001b[1;32m     59\u001b[0m         value,\n\u001b[1;32m     60\u001b[0m         name\u001b[38;5;241m=\u001b[39mkey,\n\u001b[1;32m     61\u001b[0m         description\u001b[38;5;241m=\u001b[39mschema_field\u001b[38;5;241m.\u001b[39mdescription,\n\u001b[1;32m     62\u001b[0m         constraints\u001b[38;5;241m=\u001b[39mschema_field\u001b[38;5;241m.\u001b[39mconstraints,\n\u001b[1;32m     63\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: No value provided for field 'notes' in section 'features' and no default value specified"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "config = config_manager.load(\"./comprehensive.yaml\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cf6aa7a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'postgres-prod.internal'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "config[\"database_postgresql\"][\"primary\"][\"credentials\"][\"username\"]"
+    "config[\"database_postgresql\"][\"host\"]"
    ]
   },
   {
@@ -628,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "864dbb5e",
    "metadata": {},
    "outputs": [],
@@ -784,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fae4a99d",
    "metadata": {},
    "outputs": [],
@@ -794,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ae3fff21",
    "metadata": {},
    "outputs": [],
@@ -804,10 +800,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "33526bd9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'localhost'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "config[\"database_postgres\"][\"host\"]"
    ]
